<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp25"
    android:orientation="vertical">

    <TextView
        style="@style/BoldTextviewStyleBlack"
        android:text="Choose any method to authenticate user."
        android:layout_gravity="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonFaceR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:background="@drawable/red_button_rounded_corner"
        android:elevation="@dimen/dp25"
        android:text="@string/text_face_recognition"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonFinerPrint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:background="@drawable/red_button_rounded_corner"
        android:elevation="@dimen/dp25"
        android:text="@string/txt_Finger_Print_Scan"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonIris"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:background="@drawable/red_button_rounded_corner"
        android:elevation="@dimen/dp25"
        android:text="@string/txt_Iris_Scan"
        android:textStyle="bold"
        android:textColor="@color/white" />


</LinearLayout>