<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/dp10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgFinger"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:background="@drawable/red_edittext_rounded_corner"
            android:src="@drawable/fingerprint_icon"
            android:padding="@dimen/dp10"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="5dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/btnInit"
                        style="@style/buttonbig2"
                        android:onClick="onControlClicked"
                        android:text="@string/txt_start_scanner" />

                    <Button
                        android:id="@+id/btnUninit"
                        style="@style/buttonbig2"
                        android:onClick="onControlClicked"
                        android:text="@string/txt_stop_scanner" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/btnSyncCapture"
                        style="@style/buttonbig2"
                        android:onClick="onControlClicked"
                        android:text="@string/txt_start_capture" />

                    <Button
                        android:id="@+id/btnStopCapture"
                        style="@style/buttonbig2"
                        android:onClick="onControlClicked"
                        android:text="@string/txt_stop_capture" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/cbFastDetection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="Fast Finger Detection"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:visibility="gone"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnMatchISOTemplate"
                style="@style/buttonbig2"
                android:onClick="onControlClicked"
                android:text="@string/txt_validate_fp"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btnExtractISOImage"
                style="@style/buttonbig2"
                android:onClick="onControlClicked"
                android:text="EXTRACT ISO"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btnSubmit"
                style="@style/buttonbig2"
                android:onClick="onControlClicked"
                android:text="@string/txt_Submit"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/btnExtractAnsi"
                style="@style/buttonbig2"
                android:onClick="onControlClicked"
                android:text="EXTRACT ANSI" />

            <Button
                android:id="@+id/btnExtractWSQImage"
                style="@style/buttonbig2"
                android:onClick="onControlClicked"
                android:text="EXTRACT WSQ" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingBottom="3dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/lblMessage"
            style="@style/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/red_edittext_rounded_corner"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/txt_no_device_connected"
            android:textSize="15dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtEventLog"
            style="@style/message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.70"
            android:background="@drawable/message"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:text=""
            android:textSize="14dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnClearLog"
            style="@style/buttonfull"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:onClick="onControlClicked"
            android:text="@string/ClearLog"
            android:visibility="gone"/>
    </LinearLayout>
</LinearLayout>