<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/blue_gradient_background">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_above="@+id/loginCard">
        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_pcmc"
            android:layout_gravity="center"/>
        <ImageView
            android:id="@+id/imageName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_pcmc_name"
            android:layout_marginTop="@dimen/dp10"/>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/loginCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp25"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/dp5"
        android:layout_centerInParent="true"
        app:cardCornerRadius="@dimen/dp5">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp10">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/profile_icon"
                app:tint="@color/black" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_username"
                android:textColor="@color/black"
                android:textSize="@dimen/sp16"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/dp10"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp10">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/lock_icon"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_password"
                android:textColor="@color/black"
                android:textSize="@dimen/sp16"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/dp10"
                android:inputType="textPassword"/>
        </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonLogin"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp30"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/dp10"
                android:background="@drawable/blue_button_rounded_corner"
                android:elevation="@dimen/dp25"
                android:text="@string/text_login"
                android:textColor="@color/white"
                android:textStyle="bold"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>